changed support url and added space after import

--- a/templates/main/manifest.json
+++ b/templates/main/manifest.json
@@ -7,7 +7,7 @@
   "billingOptions": {
     "type": "free",
     "support": {
-      "url": "https://synerise.com/support/"
+      "url": "https://example.com/support/"
     },
     "availableCountries": [
       "*"
