--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "create-vtex-app",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "",
   "type": "commonjs",
-  "scripts": {},
   "bin": {
     "create-vtex-app": "./bin/index.js"
   },
+  "contributors": [
+    {
+      "url": "https://github.com/kamilkanik",
+      "name": "kamilkanik"
+    },
+    {
+      "url": "https://github.com/Bkowiec",
+      "name": "Bkowiec"
+    }
+  ],
   "dependencies": {
     "@inquirer/prompts": "^7.3.2",
     "commander": "^13.1.0",
